# stockai

./: .gitignore  README.md  find_pattern.py  poc_grok.py  poc_grok_image_generator.py  poc_grok_image_understanding.py  pyproject.toml
stockai/: api.py  reporting.py  stock.py  stock_filter.py  stock_search.py
stockai/indicators/: pattern.py  price.py
stockai/utils/: stock.py
stockaxion/: api.py  logger.py  reporting.py  stock.py  stock_filter.py  stock_search.py
stockaxion/indicators/: pattern.py
stockaxion/utils/: generic.py  llm.py
